--- a/frontend/src/components/Footer/styles.scss
+++ b/frontend/src/components/Footer/styles.scss
@@ -9,26 +9,26 @@
   text-transform: uppercase;
   font-size: $small-font-size;
   flex-wrap: wrap;
-  @include breakpoint(mobileonly){
+  @include breakpoint(mobileonly) {
       justify-content: center;
   }
   .column {
     margin-bottom: 15px;
-    @include breakpoint(mobileonly){
+    @include breakpoint(mobileonly) {
       margin-bottom: 0;
     }
     .nav {
       .list {
         display: flex;
         flex-wrap: wrap;
-        @include breakpoint(mobileonly){
+        @include breakpoint(mobileonly) {
           justify-content: center;
         }
         .list-item {
-          margin-left: 15px;
+          margin-right: 15px;
           color: $dark-blue;
           cursor: pointer;
-          @include breakpoint(mobileonly){
+          @include breakpoint(mobileonly) {
             margin-bottom: 15px;
           }
         }
