Auth Component pt. Three

--- a/frontend/src/components/Auth/styles.scss
+++ b/frontend/src/components/Auth/styles.scss
@@ -39,7 +39,14 @@
       p {
         margin: 15px;
       }
-    }		    
+    }
+    .form-box {
+      margin-bottom: 10px;
+      img {
+        height: 60px;
+      }
+    }
+		    
   }
 }	
 	  
