--- a/frontend/src/shared/formStyles.scss
+++ b/frontend/src/shared/formStyles.scss
@@ -13,7 +13,7 @@
       border: 1px solid #efefef;
       border-radius: 3px;
       background-color: $bg-color;
-      margin-bottom: 5px;
+      margin-bottom: 7px;
       font-size: $normal-font-size;
       padding: 9px 0 7px 8px;
       font-weight: 400;
@@ -25,6 +25,10 @@
   }
   .button {
     @include blueButton();
+    i {
+      font-size: 18px;
+      margin-right: 5px;
+    }
     svg {
       margin-right: 10px;
     }
@@ -58,13 +62,21 @@
     }
   }
   .facebook-link {
-    display: flex;
     align-items: center;
     color: #385185;
     justify-content: center;
     margin-bottom: 25px;
-    svg {
+    cursor: pointer;
+    background-color: white;
+    border: 0;
+    font-size: $normal-font-size;
+    text-align: center;
+    i {
       margin-right: 5px;
+    }
+    &:focus,
+    &:active {
+      outline: none;
     }
   }
   .forgot-link {
